# deepcube

./: .gitignore  Cargo.toml  README.md  out1.txt  out2.txt
src/: color.rs  cube.rs  main.rs  move.rs
src/cube/: color.rs  coordinates.rs  cube3D.rs  display.rs  mod.rs  moves.rs  sizes.rs
src/cube/flat/: cube.rs  mod.rs  moves.rs
src/cube/three_dimensional/: cube.rs  moves.rs
src/solver/: best_first_search.rs  breath_first_search.rs  cubeset.rs  iterative_deepening.rs  iterative_deepening_Astar.rs  mod.rs  radix_tree.rs
src/solver/heuristic/: average.rs  corners.rs  counter.rs  korf.rs  middles.rs  miniCube.rs  minicube.rs  mod.rs  permutations.rs  table.rs
src/solver/heuristic/corners/: encoding.rs  mod.rs
src/solver/heuristic/middles/: encoding.rs  encoding_lower.rs  mod.rs
src/solver/heuristic/table/: mod.rs  permutations.rs
src/solver/heuristic/table/encoder/: corners.rs  middles.rs  mod.rs
src/utils/: mod.rs  optionu8.rs
