[package]
name = "deepcube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = "0.3.2"
enum-iterator = "0.7.0"
rand = "0.8.4"
ansi_term = "0.12.1"
rayon = "1.5.1"
progressing = "3.0.2"
stopwatch = "0.0.7"
serde = { version = "1.0.131", features = ["derive"]}
serde_arrays = "0.1.0"
bincode = "1.3.3"
priority-queue = "1.2.1"

[profile.release]
# https://nnethercote.github.io/perf-book/build-configuration.html
lto = true
codegen-units = 1
panic = "abort"